# secret-share

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Leptos.toml  Makefile  README.md  docker-compose.yml  flake.nix  secret-sha.re-key.pem  secret-sha.re.pem
.github/workflows/: deploy.yml
.sqlx/: query-18fe493a26bf4f5d72aadd113e30eb42ef79e0b452cf74b8deab4e93d09f5e2b.json  query-2ef9ab0e0d3fef979e159e3a12c2a2946222aa5f4b1574dce0d1a37986ecb8d5.json  query-45329e0da75523463646e489edf3623cf144cf1f528275dc184a10cc91fea1a6.json  query-5cfc0516b4e88014d72696085575e7009b08fbd3d8a76d502c4291b75e645db8.json  query-975fc9c180a83a720e5d92fa2453917d6e3c210d2420e24b33ff3b5814bd49f8.json  query-9b10b55b93c722451f2df0d54b1d7d3268a076bbb6807ce826e2abd90455c2cf.json  query-b9bfc59bf73d2b94d5f31d8b0ace6917c8b2a2d33fd87b440b7eb613f55250da.json  query-be6bf504c807926ac1ff305bf70d30e7a58eb1ef88cf42e1173958d74ce21655.json  query-be7cbf8f48804ff4ffb418f32fa7b2475e01ebc1aa36f6d2aaa6fe9cafa2f232.json  query-e6490b2b9ae49633df94244692b2e7e9aebc3b695d7a83e4e9e5d4eacf973fd8.json
crates/auth/: Cargo.toml
crates/auth/src/: email.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: .lib.rs.swp  lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  styles.css
crates/server/: Cargo.toml
crates/server/src/: apis.rs  main.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.html
frontend/src/routes/: +page.svelte
migrations/: 002_add_verified_at.sql  003_add_quota_reset.sql  004_add_creator_email.sql  006_drop_burn_columns.sql  init.sql
