[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
crypto = { path = "../crypto" }
jsonwebtoken = "10.3.0"
tokio = "1.50.0"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
