[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
crypto = { path = "../crypto" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tokio = "1.50.0"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
async-fs = "2.2.0"
sqlx = { version = "0.8.6", features = ["postgres"] }
dotenvy = "0.15.7"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
