[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
any_spawner = "0.3.0"
axum = "0.8.8"
frontend = { path = "../frontend" }
db = { path = "../db" }
crypto = { path = "../crypto" }
leptos = { version = "0.8.17", features = ["ssr"] }
leptos_axum = { version = "0.8.8" }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres"] }
uuid = "1.23.0"
serde = { version = "1.0.228", features = ["derive"] }
