[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
any_spawner = "0.3.0"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
db = { path = "../db" }
auth = { path = "../auth" }
crypto = { path = "../crypto" }
frontend = { path = "../frontend", features = ["ssr"] }
leptos = { version = "0.8.17", features = ["ssr"] }
leptos_axum = { version = "0.8.8" }
leptos_router = { version = "0.8", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "timeout"] }
uuid = { version = "1.23.0", features = ["serde"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
axum-governor = "2.0.3"
ipnet = "2.12.0"
[features]
default = []
ssr = [
  # Mówimy serwerowi, że jeśli buduje się w trybie SSR,
  # ma też włączyć tryb SSR w Twoim frontendzie.
  "frontend/ssr",
  # Jeśli w serwerze używasz bezpośrednio leptosa lub leptos_axum,
  # to powinieneś je tu dodać (odkomentuj jeśli są w [dependencies]):
  # "leptos/ssr",
  # "leptos_axum/ssr",
]
